--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Cadastro</title>
-	</head>
+{% extends 'base.html' %}
 
-	<body style="background-image: url('https://st.depositphotos.com/3532197/4923/v/950/depositphotos_49232947-stock-illustration-soccer-ball-vector-seamless-pattern.jpg');">
-	<div style="text-align: center;">
+	{% block content %}
 		<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px; background-color: #FFF; ">
 			<h1 style="text-align: center;">Cadastro</h1><br /> <br />
 			<label>Nome:</label>
@@ -18,6 +13,5 @@
 				<input  type="submit" value="Cadastrar" >
 			</div>
 		</div>
-	</div>			
-	</body>
-<html>
+	</div>
+	{% endblock %}
