--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,10 +3,14 @@
 
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 		<title>Home</title>
 	</head>
 
-	<body style="background-image: url('https://st.depositphotos.com/3532197/4923/v/950/depositphotos_49232947-stock-illustration-soccer-ball-vector-seamless-pattern.jpg');">
+	<body style="background-image: url('https://t4.ftcdn.net/jpg/02/07/42/75/240_F_207427574_wevx9gVTMeWOGjpA9Qt1FC0EXFeRnqPa.jpg');">
 
 			<div>
 				<h1 style="background-color: #737B85; padding: 70px 50px; margin: 70px 70px; color: #FFF; text-align: center; position: fixed; z-index:2; width: 100%;">Bolão</h1>
@@ -16,6 +20,7 @@
 				{% block content %}
 				{% endblock %}
 
-		<br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br />
+		<br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br /><br /> <br />
+		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 	</body>
 <html>
