--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,9 +2,15 @@
 <html>
 	<head>
 		<title>Login</title>
+
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+				<!-- Bootstrap CSS -->
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 	</head>
 
-	<body style="background-image: url('https://st.depositphotos.com/3532197/4923/v/950/depositphotos_49232947-stock-illustration-soccer-ball-vector-seamless-pattern.jpg');">
+	<body style="background-image: url('https://t4.ftcdn.net/jpg/02/07/42/75/240_F_207427574_wevx9gVTMeWOGjpA9Qt1FC0EXFeRnqPa.jpg');">
 	<div style="text-align: center;">
 		<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px;  background-color: #FFF; ">
 			<h1 style="text-align: center;">Login</h1><br /> <br />
@@ -16,7 +22,6 @@
 				<input type="submit" value="Entrar" >
 			</div>
 		</div>
-	</div>			
+	</div>
 	</body>
 <html>
-
