--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -1,5 +1,3 @@
-<!--{% extends 'base.html' %} -->
-<!-- {% block content %} -->
 <!DOCTYPE html>
 <html>
 
@@ -12,10 +10,11 @@
 		<title>cadastro</title>
 	</head>
 	<body style="background-image: url('https://t4.ftcdn.net/jpg/02/07/42/75/240_F_207427574_wevx9gVTMeWOGjpA9Qt1FC0EXFeRnqPa.jpg')">
+		<form method="post">
 		<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px; background-color: #FFF; ">
 			<h1 style="text-align: center;">Cadastro</h1><br /> <br />
 			<label>Nome:</label>
-				<input type="text" name="nome"><br /> <br />
+				<input type="text" name="nome" required><br /> <br />
 			<label>Email:</label>
 				<input type="email" name="e-mail" required><br /> <br />
 			<label>Senha:</label>
@@ -24,6 +23,6 @@
 				<input  type="submit" value="Cadastrar" >
 			</div>
 			<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+		</form>
 	</body>
-	<!-- {% endblock %} -->
 </html>
