--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,17 +11,20 @@
 	</head>
 
 	<body style="background-image: url('https://t4.ftcdn.net/jpg/02/07/42/75/240_F_207427574_wevx9gVTMeWOGjpA9Qt1FC0EXFeRnqPa.jpg');">
-	<div style="text-align: center;">
-		<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px;  background-color: #FFF; ">
-			<h1 style="text-align: center;">Login</h1><br /> <br />
-			<label>Email:</label>
-				<input type="email" name="e-mail"><br /> <br />
-			<label>Senha:</label>
-				<input type="password" name="senha"><br /> <br />
-			<div>
-				<input type="submit" value="Entrar" >
+		<form method="post">
+			<div style="text-align: center;">
+				<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px;  background-color: #FFF; ">
+					<h1 style="text-align: center;">Login</h1><br /> <br />
+					<label>Email:</label>
+						<input type="email" name="e-mail"><br /> <br />
+					<label>Senha:</label>
+						<input type="password" name="senha"><br /> <br />
+					<div>
+						<input type="submit" value="Entrar" >
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
+	</form>
 	</body>
 <html>
+
