--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,7 @@
 	<body style="background-image: url('https://t4.ftcdn.net/jpg/02/07/42/75/240_F_207427574_wevx9gVTMeWOGjpA9Qt1FC0EXFeRnqPa.jpg');">
 		<form method="post">
 			<div style="text-align: center;">
-				<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px;  background-color: #FFF; ">
+				<div style="; border: 4px solid #000; padding: 0 0; margin: 0 auto; width: 500px;  background-color: #27ae60; ">
 					<h1 style="text-align: center;">Login</h1><br /> <br />
 					<label>Email:</label>
 						<input type="email" name="e-mail"><br /> <br />
