--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -40,16 +40,23 @@
 						  	</tr>
 						    <tr>
 						      <th scope="col">Nome do Bolão</th>
-						      <th scope="col">Situação</th>
-						      <th scope="col">Vencedor</th>
+						      <!--<th scope="col">Situação</th>-->
+						      <th scope="col">Data de termino</th>
 						      <th scope="col">Participantes</th>
 						    </tr>
 						  </thead>
+
+						  {% for listabolao %}
 						  <tbody>
 						    <tr>
 						      <th scope="row">1</th>
-						      <td>Mark</td>
-						      <td>Otto</td>
+						      {% if bolao %}
+						      	<td>{{nome_bolao}}</td>
+						      {% endif %}
+
+						      {% if terminar %}
+
+						      <td>{{ terminar }}</td>
 						      <td>@mdo</td>
 						    </tr>
 						    </tbody>
